@@ -1,5 +1,12 @@
 This is the Changelog for amavisd-milter.
 
+20051225:
+	Added amavisd-milter(8) manual page. README and website are
+	synchronized with this manual page.
+
+	Changed default working directory to /var/amavis (default value
+	for amavisd-new helpers home directory).
+
 20051204:
 	Some users reports problem with ENOMEM in amavis_response().
 	Consequently MAXAMABUF is increased from 1024 to 2048, amavis_request()
@@ -61,4 +68,4 @@ This is the Changelog for amavisd-milter.
 	First public release. Fully tested on FreeBSD 5.3.
 
 
-$Id: CHANGES,v 1.12 2005/12/04 13:52:36 reho Exp $
+$Id: CHANGES,v 1.13 2005/12/04 23:59:51 reho Exp $
